@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-29T16:16:24Z",
-  "count_outdated" : 79,
-  "uniques_outdated" : 62,
+  "timestamp" : "2024-05-08T16:17:21Z",
+  "count_outdated" : 81,
+  "uniques_outdated" : 63,
   "count" : 82,
   "uniques" : 64,
   "clones" : [
-    {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-29T00:00:00Z",
       "count": 1,
